# weni-utils-tools

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: modular_usage.py
examples/obramax_agent/: main.py
examples/order_status_agent/: main.py
src/weni_utils/: __init__.py
src/weni_utils/tools/: __init__.py  client.py  concierge.py  context.py  functions.py  orders.py  proxy.py  stock.py  utils.py
src/weni_utils/tools/plugins/: __init__.py  base.py  capi.py  carousel.py  cart_simulation.py  regionalization.py  send_message.py  utils.py  weni_flow.py  wholesale.py
tests/: test.py  test_client.py  test_concierge.py  test_orders.py  test_orders_proxy.py  test_utils.py
